@@ -231,4 +231,142 @@ void *clamukoth(void *arg)
     return clamukofsth(arg);
 }
 
+#elif defined(CLAMAUTH)
+
+#include <stdio.h>
+#include <unistd.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <sys/uio.h>
+#include <fcntl.h>
+#include <signal.h>
+#include <pthread.h>
+#include <string.h>
+#include <errno.h>
+
+#include "libclamav/clamav.h"
+#include "libclamav/scanners.h"
+
+#include "shared/optparser.h"
+#include "shared/output.h"
+
+#include "server.h"
+#include "others.h"
+#include "scanner.h"
+
+#define SUPPORTED_PROTOCOL  2
+
+static int cauth_fd = -1;
+
+struct ClamAuthEvent {
+    unsigned int action;
+    char path[1024];
+    unsigned int pid;
+};
+
+static void cauth_exit(int sig)
+{
+    logg("*ClamAuth: cauth_exit(), signal %d\n", sig);
+    if(cauth_fd > 0)
+	close(cauth_fd);
+    pthread_exit(NULL);
+    logg("ClamAuth: stopped\n");
+}
+
+static int cauth_scanfile(const char *fname, int extinfo, struct thrarg *tharg)
+{
+	struct cb_context context;
+	const char *virname;
+	int ret = 0, fd;
+
+    context.filename = fname;
+    context.virsize = 0;
+
+    fd = open(fname, O_RDONLY);
+    if(fd == -1)
+	return -1;
+
+    if(cl_scandesc_callback(fd, &virname, NULL, tharg->engine, tharg->options, &context) == CL_VIRUS) {
+	if(context.virsize)
+	    detstats_add(virname, fname, context.virsize, context.virhash);
+	if(extinfo && context.virsize)
+	    logg("ClamAuth: %s: %s(%s:%llu) FOUND\n", fname, virname, context.virhash, context.virsize);
+	else
+	    logg("ClamAuth: %s: %s FOUND\n", fname, virname);
+	virusaction(fname, virname, tharg->opts);
+    }
+    close(fd);
+    return ret;
+}
+
+void *clamukoth(void *arg)
+{
+	struct thrarg *tharg = (struct thrarg *) arg;
+	sigset_t sigset;
+        struct sigaction act;
+	int eventcnt = 1, extinfo;
+	char err[128];
+	struct ClamAuthEvent event;
+
+    /* ignore all signals except SIGUSR1 */
+    sigfillset(&sigset);
+    sigdelset(&sigset, SIGUSR1);
+    /* The behavior of a process is undefined after it ignores a 
+     * SIGFPE, SIGILL, SIGSEGV, or SIGBUS signal */
+    sigdelset(&sigset, SIGFPE);
+    sigdelset(&sigset, SIGILL);
+    sigdelset(&sigset, SIGSEGV);
+#ifdef SIGBUS    
+    sigdelset(&sigset, SIGBUS);
+#endif
+    pthread_sigmask(SIG_SETMASK, &sigset, NULL);
+    memset(&act, 0, sizeof(struct sigaction));
+    act.sa_handler = cauth_exit;
+    sigfillset(&(act.sa_mask));
+    sigaction(SIGUSR1, &act, NULL);
+    sigaction(SIGSEGV, &act, NULL);
+
+    extinfo = optget(tharg->opts, "ExtendedDetectionInfo")->enabled;
+
+    cauth_fd = open("/dev/clamauth", O_RDONLY);
+    if(cauth_fd == -1) {
+	logg("!ClamAuth: Can't open /dev/clamauth\n");
+	if(errno == ENOENT)
+	    logg("!ClamAuth: Please make sure ClamAuth.kext is loaded\n");
+	else if(errno == EACCES)
+	    logg("!ClamAuth: This application requires root privileges\n");
+	else
+	    logg("!ClamAuth: /dev/clamauth: %s\n", cli_strerror(errno, err, sizeof(err)));
+
+	return NULL;
+    }
+
+    while(1) {
+	if(read(cauth_fd, &event, sizeof(event)) > 0) {
+	    if(eventcnt == 1) {
+		if(event.action != SUPPORTED_PROTOCOL) {
+		    logg("!ClamAuth: Protocol version mismatch (tool: %d, driver: %d)\n", SUPPORTED_PROTOCOL, event.action);
+		    close(cauth_fd);
+		    return NULL;
+		}
+		if(strncmp(event.path, "ClamAuth", 8)) {
+		    logg("!ClamAuth: Invalid version event\n");
+		    close(cauth_fd);
+		    return NULL;
+		}
+		logg("ClamAuth: Driver version: %s, protocol version: %d\n", &event.path[9], event.action);
+	    } else {
+		cauth_scanfile(event.path, extinfo, tharg);
+	    }
+	    eventcnt++;
+	} else {
+	    if(errno == ENODEV) {
+		printf("^ClamAuth: ClamAuth module deactivated, terminating\n");
+		close(cauth_fd);
+		return NULL;
+	    }
+	}
+	usleep(200);
+    }
+}
 #endif
